<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="19dp"
    tools:layout_editor_absoluteY="0dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Texto1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:backgroundTint="#F80C0C"
        android:onClick="IraSegAct"
        android:text="@string/Boton1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/chkItem5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Check5"
        app:layout_constraintStart_toStartOf="@+id/chkItem4"
        app:layout_constraintTop_toBottomOf="@+id/chkItem4" />

    <CheckBox
        android:id="@+id/chkItem4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Check4"
        app:layout_constraintStart_toStartOf="@+id/chkItem3"
        app:layout_constraintTop_toBottomOf="@+id/chkItem3" />

    <CheckBox
        android:id="@+id/chkItem3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Check3"
        app:layout_constraintStart_toStartOf="@+id/chkItem2"
        app:layout_constraintTop_toBottomOf="@+id/chkItem2" />

    <CheckBox
        android:id="@+id/chkItem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Check1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <CheckBox
        android:id="@+id/chkItem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Check2"
        app:layout_constraintStart_toStartOf="@+id/chkItem1"
        app:layout_constraintTop_toBottomOf="@+id/chkItem1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Texto2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963" />

    <TextView
        android:id="@+id/precioItem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="180dp"
        android:text="@string/precio1"
        app:layout_constraintStart_toEndOf="@+id/chkItem1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/precioItem4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/precio4"
        app:layout_constraintEnd_toEndOf="@+id/precioItem3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/chkItem4"
        app:layout_constraintTop_toBottomOf="@+id/precioItem3" />

    <TextView
        android:id="@+id/precioItem3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/precio3"
        app:layout_constraintEnd_toEndOf="@+id/precioItem2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/chkItem3"
        app:layout_constraintTop_toBottomOf="@+id/precioItem2" />

    <TextView
        android:id="@+id/precioItem5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="80dp"
        android:text="@string/precio5"
        app:layout_constraintEnd_toEndOf="@+id/precioItem4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/chkItem5"
        app:layout_constraintTop_toBottomOf="@+id/precioItem4" />

    <TextView
        android:id="@+id/precioItem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/precio2"
        app:layout_constraintEnd_toEndOf="@+id/precioItem1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/chkItem2"
        app:layout_constraintTop_toBottomOf="@+id/precioItem1" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Texto8"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

</androidx.constraintlayout.widget.ConstraintLayout>